--- a/Day20/index.html
+++ b/Day20/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+   
+   <h1 class="title-1">başlik 1</h1>
+   <h1 class="title-1">başlik 2</h1>
+   <h1 id="title">başlik 3</h1>
+   <h1 class="title-2">başlik 4</h1>
+   
+   
     <script src="dom1.js"></script>
 </body>
 </html>
