--- a/Day22/index.html
+++ b/Day22/index.html
@@ -7,6 +7,23 @@
     <title>Document</title>
 </head>
 <body>
+   
+    <input type="color" id="color-picker">
+   <input type="text" id="name" placeholder="Adinizi yazin">
+    <select id="gender">
+        <option value="">Sec</option>
+        <option value="erkek">Erkek</option>
+        <option value="kadin">Kadin</option>
+    </select>
+    <label >
+        <input type="checkbox" id="save-rules">
+        Kurallari kabul ediyorum. 
+    </label>
+   <button id="save-btn">Kaydet</button>
+   <hr>
+   
+    <button id="btn">Click</button>
+   
     <script src="dom3.js"></script>
 </body>
 </html>
